--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is a sample project for the Ozanam Gala registration website. It's kind of a work in progress when time is available.
 
-Current tech stack: Express 4,  (express3-handlebars), MongoDb, Redis (session), Passport for auth, AWS-SMS for email, and a simple Paypal integration.
+Current tech stack: Express 4,  (express3-handlebars), MongoDb, AWS-SMS for email, and a simple Paypal integration.
