Sizable updates to the repository/model setup. These were very old and the mongo-repo dependency changed its behavior recently for other projects. This is aquick update to get this project consitent with what mongo-repo expects. Aded some tests for pricing and payment integration. Changed pricing for Ozaname with their 2015 updates.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-This is a sample project for the Ozanam Gala registration website. It's kind of a work in progress when time is available. 
+This is a sample project for the Ozanam Gala registration website that I started in mid 2013. It started as a learning project and now cruises along in maintenance mode with occasional updates to infrastructure. Bear in mind some of the tech used here is a bit dated and only updated as necessary.
 
-Current tech stack: Express 4,  (express-handlebars), MongoDb (native driver), AWS-SMS for email, and a simple Paypal integration.
+Current tech stack: Express 4,  (express-handlebars), MongoDb (native driver w/ a thin wrapper), AWS-SMS for email, and a simple Paypal integration. Also I've recently (mid-2015) added some basic testing to ensure pricing and other misc functions using Mocha.
+
+To test, please use `bin/t`. Some of the tests include partial integrations to a test database.  `bin/t` is a simple way to load up a test environment and test against a sandbox database. 
